front_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: client
    template:
        metadata:
            labels:
                component: client
        spec:
            containers:
                -   name: client
                    image: node:latest
                    ports:
                        - containerPort: 8080
                    command: ["/bin/sh","-c"]
                    args: ["COPY ./package.json ./; RUN npm install; COPY . .; npm run start"]
---
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: client
    ports:
     -   port: 8080
         targetPort: 8080
